build beacon spectrum structure