@@ -1,21 +1,20 @@
 package com.ongakucraft.core.block.define;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
 import com.ongakucraft.core.block.Block;
 import com.ongakucraft.core.block.BlockId;
 import com.ongakucraft.core.block.Direction;
 import com.ongakucraft.core.color.LabColor;
 import com.ongakucraft.core.color.RgbColor;
-
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NonNull;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor(access = AccessLevel.PRIVATE)
 @Getter
@@ -25,21 +24,28 @@ public final class BlockDatasetDefine {
                                         List<BlockDefine> blockDefineList,
                                         List<BlockRgbColorDefine> blockRgbColorDefineList,
                                         List<BlockLabColorDefine> blockLabColorDefineList) {
-        final var blockMap = blockDefineList.stream().collect(Collectors.toMap(BlockDefine::getId, Block::of));
+        final var blockList = blockDefineList.stream().map(Block::of).toList();
+        final var blockPropertyDefineMap = blockPropertyDefineList.stream().collect(Collectors.toMap(BlockPropertyDefine::getId, Function.identity()));
+        final var blockMap = blockList.stream().collect(Collectors.toMap(Block::getId, Function.identity()));
         final var rgbColorMap = blockRgbColorDefineList.stream().collect(Collectors.toMap(BlockRgbColorDefine::getId, Function.identity()));
         final var labColorMap = blockLabColorDefineList.stream().collect(Collectors.toMap(BlockLabColorDefine::getId, Function.identity()));
-        return new BlockDatasetDefine(version, List.copyOf(blockPropertyDefineList),
-                                      List.copyOf(blockRgbColorDefineList),
-                                      List.copyOf(blockLabColorDefineList),
-                                      Collections.unmodifiableMap(blockMap),
-                                      Collections.unmodifiableMap(rgbColorMap),
-                                      Collections.unmodifiableMap(labColorMap));
+        return new BlockDatasetDefine(version,
+                Collections.unmodifiableList(blockPropertyDefineList),
+                blockList,
+                Collections.unmodifiableList(blockRgbColorDefineList),
+                Collections.unmodifiableList(blockLabColorDefineList),
+                Collections.unmodifiableMap(blockPropertyDefineMap),
+                Collections.unmodifiableMap(blockMap),
+                Collections.unmodifiableMap(rgbColorMap),
+                Collections.unmodifiableMap(labColorMap));
     }
 
     @NonNull private final BlockDatasetVersion version;
     @NonNull private final List<BlockPropertyDefine> blockPropertyDefineList;
+    @NonNull private final List<Block> blockList;
     @NonNull private final List<BlockRgbColorDefine> blockRgbColorDefineList;
     @NonNull private final List<BlockLabColorDefine> blockLabColorDefineList;
+    @NonNull private final Map<String, BlockPropertyDefine> blockPropertyDefineMap;
     @NonNull private final Map<BlockId, Block> blockMap;
     @NonNull private final Map<BlockId, BlockRgbColorDefine> rgbColorDefineMap;
     @NonNull private final Map<BlockId, BlockLabColorDefine> labColorDefineMap;
