@@ -1,17 +1,12 @@
 package com.ongakucraft.core.block.define;
 
-import static lombok.EqualsAndHashCode.CacheStrategy.LAZY;
+import com.ongakucraft.core.block.BlockId;
+import lombok.*;
 
+import java.util.Collections;
 import java.util.List;
 
-import com.ongakucraft.core.block.BlockId;
-
-import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import lombok.EqualsAndHashCode;
-import lombok.Getter;
-import lombok.NonNull;
-import lombok.ToString;
+import static lombok.EqualsAndHashCode.CacheStrategy.LAZY;
 
 @AllArgsConstructor(access = AccessLevel.PRIVATE)
 @EqualsAndHashCode(cacheStrategy = LAZY, of = "id")
@@ -19,7 +14,7 @@ import lombok.ToString;
 @ToString
 public final class BlockDefine {
     public static BlockDefine of(BlockId id, List<BlockPropertyDefine> properties, boolean collisionShapeFullBlock) {
-        return new BlockDefine(id, List.copyOf(properties), collisionShapeFullBlock);
+        return new BlockDefine(id, Collections.unmodifiableList(properties), collisionShapeFullBlock);
     }
 
     @NonNull private final BlockId id;
